# quarantine-fourteen

./: LICENSE  Main.py  README.md  pyproject.toml
.github/workflows/: black-check.yml  formatting-check.yml  poetry-install-check.yml  poetry-install.yml  poetry.yml
demos/: intro.cast
docs/: README.md
internals/: __init__.py  asciiart.py
scenes/: ending.py  gameplay.py  intro.py
